# xiuxian.skill

./: LICENSE  README.md  README_EN.md  SKILL.md  pyproject.toml
assets/prompts/: certificate-premium.prompt.md  realm-talisman.prompt.md  xiulian-card.prompt.md  xiuxian-card.prompt.md
docs/: card-lexicon.md  lexicon.md  promo.md
examples/: demo_codex_session.jsonl  demo_report.md
portrait_skill/: analyzer.py  cards.py  cli.py  models.py  parsers.py  renderer.py  themes.py  xianxia.py
scripts/: sync_demo_assets.py
tests/: test_cli_behaviors.py  test_cli_e2e.py  test_distill_pipeline.py  test_secondary_skill.py
vibecoding_skill/: analyzer.py  cli.py  distill.py  exporter.py  insights.py  readme_sync.py  renderer.py  secondary_skill.py  terms.py
xiuxian_skill/: __init__.py  analyzer.py  cards.py  cli.py  insights.py  memory.py  renderer.py  themes.py  xianxia.py
