[project]
name = "xiuxian-skill"
version = "0.1.0"
description = "Read agent transcripts, distill vibe coding ability, and issue a shareable cultivation card."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
xiuxian-skill = "xiuxian_skill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xiuxian_skill"]
