[project]
name = "vibecoding-skill"
version = "0.1.0"
description = "Read code-agent traces, distill vibecoding habits, mimic a person's collaboration style, rate level, generate upgrade guidance, and export a shareable skill bundle."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7,<3",
    "Pillow>=10,<12",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[project.scripts]
vibecoding-skill = "vibecoding_skill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vibecoding_skill"]
